- Added the time remaining for videos with "no-size" (RTMP protocol)
- Improved time remaining calculation (RTMP and HTTP protocols)
- Improved video previews in search functions
- Improved session, when a new video is added the session is saved

- Added one new plug-in:
	- TV3 a la Carta

- Changed plug-ins:
	- Google Videos (updated search functions)

Mac OS X:
---------

- Added GROWL support (if GROWL is not supported the old information popup is displayed)

2.3.2:
------

- Compiled with Qt 4.6

- Updated program copyright to 2010

- Changed plug-ins:
	- ClipFish

Windows:
--------

- Solved problem with downloads on Windows Vista and Windows 7 (fixed upgrading to Qt 4.6)

Mac OS X:
---------

- Added official Intel 64-bits support

- Improved support on Mac OS X Snow Leopard (32 and 64 bits)

2.3.1:
------

- Added one new plug-in:
	- Game Anyone? (thanks to Max Zorloff)

- Changed plug-ins:
	- YouPorn (added search functions, thanks to Matze Ba)
	- MyVideo (added search functions, thanks to Matze Ba)
	- ClipFish (added search functions, thanks to Matze Ba)
	- YouTube
	- 5min
	- Break
	- Caught-on-video
	- KeezMovies
	- MySpass
	- PornHub
	- Spike
	- Tangle
	- T'n A flix
	- Vimeo

- Revised Hungarian translation

- Fixed bug (Error: Failed downloads were reported as "Completed" instead of as "Error")

Plugins SDK:
------------

- Added 5 new helper functions:
	- String trimString(String str)
	- String simplifyString(String str)
	- String programVersion()
	- String programVersionShort()
	- String programVersionNumber()

- Fixed bug (Error: The default value of strLastIndexOf was incorrect)

2.3:
----

- Added possibility to execute the xVST without the loading splash screen (execute with -nosplash)
- Added possibility to add videos on execution time (if another instance of xVST is running those URLs will be added into the current xVST instance)
- Added "Plugin Version" information in "Bug Report"
- Added Italiano translation (thanks to Vecna)