@@ -25,7 +25,7 @@
 
 function RegistVideoService()
 {
-	this.version = "1.0.1";
+	this.version = "1.0.2";
 	this.minVersion = "2.0.0a";
 	this.author = "Xesc & Technology 2009";
 	this.website = "http://www.break.com/";
@@ -44,7 +44,7 @@ function getVideoInformation(url)
 	var http = new Http();
 	var html = http.downloadWebpage(url);
 	// get title
-	result.title = copyBetween(html, "<title>", "&nbsp;");
+	result.title = copyBetween(html, '<meta name="title" content="', '"');
 	// get video pre-url
 	var preUrl = copyBetween(html, 'var videoPath = "', '"');
 	// get variable values
